--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="top-container">
       <img class="top-cloud" src="Images/cloud.png" alt="cloud-img">
       <h1>I'm Shloka</h1>
-      <h2>a <span class="pro">pro</span>grammer.</h2>
+      <h2>a Developer</h2>
       <img class="bottom-cloud" src="Images/cloud.png" alt="cloud-img">
       <img src="Images/mountain.png" alt="mountain-img">
     </div>
